Fix Regression: Size of text caret is longer then expected on bookmarks overlay

When the system language is set to Telegu, the text cursor is displayed to be 
longer than the textfield in the bookmark overlay. The problem is that different 
languages are displayed at different font, so the text cursor can be longer for 
some font, ex: Telegu. The Text cursor should stop using the fixed default height  
and be able to adjust its height based on the height of the textfield and the 
location of the origin of the cursor. 

TEXT=TextfieldTest.CursorViewHeight

Bug: 739686
Change-Id: If57578c7fc2f8342bd81707f45db5d278d8b9822
Reviewed-on: https://chromium-review.googlesource.com/608628
Reviewed-by: Sadrul Chowdhury <sadrul@chromium.org>
Commit-Queue: Yi Xu <yiyix@chromium.org>
Cr-Commit-Position: refs/heads/master@{#494150}
Former-commit-id: a0b867b844d0e05d5b5699016468870581a12ad4