ui/views/controls/textfield/textfield_test_api.h
@@ -45,7 +45,8 @@ class TextfieldTestApi {
     return textfield_->cursor_blink_timer_.IsRunning();
   }
 
-  gfx::Point GetCursorViewOrigin() { return textfield_->cursor_view_.origin(); }
+  gfx::Rect GetCursorViewRect() { return textfield_->cursor_view_.bounds(); }
+  void SetCursorViewRect(gfx::Rect bounds);
 
   bool IsCursorVisible() const { return textfield_->cursor_view_.visible(); }
 
